# pico_rust

./: Cargo.toml  LICENSE  README.MD  memory.x
.cargo/: config.toml
